deployment/contour/03-envoy.yaml
apiVersion: extensions/v1beta1
kind: DaemonSet
metadata:
  labels:
    app: envoy
  name: envoy
  namespace: gimbal-contour
spec:
  updateStrategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 10%
  selector:
    matchLabels:
      app: envoy
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8002"
        prometheus.io/statsdport: "9102"
        prometheus.io/path: "/stats"
        prometheus.io/format: "prometheus"
      labels:
        app: envoy
    spec:
      containers:
      - args:
        - -c
        - /config/contour.yaml
        - --service-cluster
        - cluster0
        - --service-node
        - node0
        command:
        - envoy
        image: docker.io/envoyproxy/envoy-alpine:v1.9.0
        imagePullPolicy: IfNotPresent
        name: envoy
        ports:
        - containerPort: 80
          hostPort: 80
          name: http
          protocol: TCP
        - containerPort: 443
          hostPort: 443
          name: https
          protocol: TCP
        volumeMounts:
          - name: contour-config
            mountPath: /config
      - name: statsd-sink
        image: prom/statsd-exporter:v0.6.0
        command: 
            - "/bin/statsd_exporter"
        args:
            - "-statsd.mapping-config=/etc/statsd/statsd.yaml"
        ports:
        - containerPort: 9102
          protocol: TCP
          name: metrics
        volumeMounts:
            - name: statsd
              mountPath: /etc/statsd
      dnsPolicy: ClusterFirstWithHostNet
      hostNetwork: true
      automountServiceAccountToken: false   
      volumes:
        - name: contour-config
          emptyDir: {}
        - name: statsd
          configMap:
            name: envoy-statsd
      restartPolicy: Always
