deployment/contour/02-service-contour.yaml
apiVersion: v1
kind: Service
metadata:
 name: contour
 namespace: gimbal-contour
spec:
 ports:
 - port: 8001
   name: xds
   protocol: TCP
   targetPort: 8001
 selector:
   app: contour
 type: ClusterIP
