deployment/contour/03-policy.yaml
apiVersion: v1
kind: List
items:
- apiVersion: extensions/v1beta1
  kind: NetworkPolicy
  metadata:
    name: default-deny
    namespace: gimbal-contour
  spec:
    podSelector: {}
    policyTypes:
    - Ingress
- apiVersion: extensions/v1beta1
  kind: NetworkPolicy
  metadata:
    name: envoy-allow
    namespace: gimbal-contour
  spec:
    ingress:
    - from:
      - podSelector:
          matchLabels:
            app: envoy
    podSelector:
      matchLabels:
        app: contour
    policyTypes:
    - Ingress
- apiVersion: extensions/v1beta1
  kind: NetworkPolicy
  metadata:
    name: envoy-external
    namespace: gimbal-contour
  spec:
    ingress:
    - ports:
      - port: 80
        protocol: TCP
      - port: 443
        protocol: TCP
    podSelector:
      matchLabels:
        app: envoy
    policyTypes:
    - Ingress
- apiVersion: extensions/v1beta1
  kind: NetworkPolicy
  metadata:
    name: prometheus-allow
    namespace: gimbal-contour
  spec:
    ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            app: gimbal-monitoring
    podSelector:
      matchLabels:
        app: envoy
    policyTypes:
    - Ingress
